Deleted button added

--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
         "axios": "^0.17",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1",
+        "dayjs": "^1.7.5",
         "jquery": "^3.2",
-        "laravel-mix": "^1.0",
+        "laravel-mix": "^2.1.14",
         "lodash": "^4.17.4",
         "vue": "^2.5.7",
         "vue-resource": "^1.5.1",
