--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     },
     "devDependencies": {
         "axios": "^0.17",
-        "bootstrap-sass": "^3.4.0",
+        "bootstrap-sass": ">=3.4.1",
         "cross-env": "^5.1",
         "dayjs": "^1.8.12",
         "jquery": "^3.2",
         "laravel-mix": "^2.1.14",
-        "lodash": "^4.17.11",
+        "lodash": ">=4.17.11",
         "vue": "^2.6.10",
         "vue-resource": "^1.5.1",
         "vue-router": "^3.0.6"
